# packages/token-kiosk/src/serverBuilder.ts
@@ -1,5 +1,4 @@
-import express, { Router } from 'express';
-import { auth } from 'express-openid-connect';
+import express, { Router, static as expressStatic } from 'express';
 import bodyParser from 'body-parser';
 import compression from 'compression';
 import { OpenapiViewerRouter } from '@map-colonies/openapi-express-viewer';
@@ -16,7 +15,7 @@ import { TOKEN_ROUTER_SYMBOL } from './tokens/routes/tokenRouter';
 import { AUTH_ROUTER_SYMBOL } from './auth/routes/authRouter';
 import { openidAuthMiddlewareFactory } from './auth/middlewares/openid';
 import { GUIDES_ROUTER_SYMBOL } from './guides/routes/guidesRouter';
-import { QLR_ROUTER_SYMBOL } from './qlr/routes/qlrRouter';
+import { FILES_ROUTER_SYMBOL } from './files/routes/filesRouter';
 
 @injectable()
 export class ServerBuilder {
@@ -29,7 +28,7 @@ export class ServerBuilder {
     @inject(TOKEN_ROUTER_SYMBOL) private readonly tokenRouter: Router,
     @inject(AUTH_ROUTER_SYMBOL) private readonly authRouter: Router,
     @inject(GUIDES_ROUTER_SYMBOL) private readonly guidesRouter: Router,
-    @inject(QLR_ROUTER_SYMBOL) private readonly qlrRouter: Router,
+    @inject(FILES_ROUTER_SYMBOL) private readonly qlrRouter: Router,
     @inject(SERVICES.AUTH_MIDDLEWARE) private readonly authMiddleware: ReturnType<typeof openidAuthMiddlewareFactory>
   ) {
     this.serverInstance = express();
@@ -57,7 +56,7 @@ export class ServerBuilder {
     router.use('/auth', this.authRouter);
     router.use('/token', this.tokenRouter);
     router.use('/guides', this.guidesRouter);
-    router.use('/qlr', this.qlrRouter);
+    router.use('/files', this.qlrRouter);
 
     this.serverInstance.use('/api', router);
 
@@ -73,6 +72,8 @@ export class ServerBuilder {
     }
 
     this.serverInstance.use(bodyParser.json(this.config.get('server.request.payload')));
+
+    this.serverInstance.use(expressStatic('public'));
 
     this.serverInstance.use(this.authMiddleware);
 
